// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[EditText] default renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
        "width": "100%",
      },
    ]
  }
>
  <Text
    style={
      Array [
        Object {
          "color": "#b9b9c4",
          "fontSize": 14,
          "fontWeight": "500",
        },
        null,
        undefined,
      ]
    }
  />
  <TextInput
    allowFontScaling={true}
    autoCapitalize="none"
    onBlur={[Function]}
    onFocus={[Function]}
    rejectResponderTermination={true}
    style={
      Array [
        Object {
          "color": "#2c374e",
          "fontSize": 15,
          "fontWeight": "500",
          "paddingBottom": 10,
          "paddingLeft": 0,
          "paddingRight": 0,
          "paddingTop": 15,
        },
      ]
    }
    underlineColorAndroid="transparent"
  />
  <View
    style={
      Array [
        Object {
          "borderColor": "#eaeaf9",
          "borderStyle": "solid",
          "borderWidth": 0.6,
        },
        null,
        undefined,
      ]
    }
  />
</View>
`;

exports[`[EditText] row renders without crashing 1`] = `
<View
  style={
    Array [
      Object {
        "alignSelf": "stretch",
        "flexDirection": "column",
        "width": "100%",
      },
    ]
  }
>
  <View
    style={
      Array [
        Object {
          "alignItems": "center",
          "flexDirection": "row",
          "justifyContent": "flex-end",
        },
      ]
    }
  >
    <TextInput
      allowFontScaling={true}
      autoCapitalize="none"
      onBlur={[Function]}
      onFocus={[Function]}
      rejectResponderTermination={true}
      style={
        Array [
          Object {
            "color": "#2c374e",
            "fontSize": 14,
            "fontWeight": "bold",
            "paddingBottom": 16,
            "paddingLeft": 120,
            "paddingRight": 0,
            "paddingTop": 16,
            "textAlign": "right",
            "width": "100%",
          },
        ]
      }
      underlineColorAndroid="transparent"
    />
  </View>
  <View
    style={
      Array [
        Object {
          "borderColor": "#eaeaf9",
          "borderStyle": "solid",
          "borderWidth": 0.6,
        },
        Object {
          "borderColor": "#eaeaf9",
        },
        null,
      ]
    }
  />
</View>
`;
